# nyc-taxi-trip-experiments

./: .gitignore  README.md  pyproject.toml
dbt/: dbt_project.yml  packages.yml
dbt/macros/: harvesine_distance.sql
dbt/models/insights/airport_insights/: aggregated_dropoff_insights_by_dow.sql  aggregated_dropoff_insights_by_hod.sql  aggregated_pickup_insights_by_dow.sql  aggregated_pickup_insights_by_hod.sql  aggregated_trip_insights_by_dow.sql  aggregated_trip_insights_by_hod.sql  airport_dropoffs.sql  airport_pickups.sql  (+4 more)
nyc-taxi-trip-duration-dbt/: dbt_project.yml
nyc-taxi-trip-duration-dbt/logs/: dbt.log.legacy
nyc-taxi-trip-duration-dbt/models/: correlations.sql  schema.yml  sources.yml  trip_duration_model.sql  trip_duration_prediction.sql
nyc-taxi-trip-duration-pyspark/: airport_insights.py  predict_trip_duration.py  pyproject.toml
nyc-taxi-trip-duration-pyspark/terraform/: main.tf  variables.auto.tfvars  variables.tf
nyc-taxi-trip-duration-pyspark/terraform-dataproc-cluster/: main.tf
nyc-taxi-trip-visualisations/: airport_insights.py  comparing_market_share_of_ride_hailing_apps.py
pyspark/airport-insights/: airport_insights.py
pyspark/taxi-trip-duration/: predict_trip_duration.py  real_time_prediction_service_(local).py
terraform/: dataproc_resources.tf  gbq_resources_for_dbt.tf  gcs_resources.tf  main.tf  provider.tf  variables.tf
visualisations/insights/airport-insights/: airport_insights.py
visualisations/insights/market-share/: comparing_market_share_of_ride_hailing_apps.py
visualisations/nyc-taxi-trips-maps/: nyc_taxi_trip_map.py
(+5 files in other folders)
