[tool.poetry]
name = "nyc-taxi-trip-duration"
version = "0.1.0"
description = ""
authors = ["niranjani <ingaleniranjan365@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
h5py = "^3.8.0"
numpy = "^1.24.2"
pyspark = "3.4.0"
findspark = "^2.0.1"
hdf5plugin = "^4.1.1"
fastparquet = "^2023.2.0"
pyarrow = "^12.0.0"
joblib = "^1.2.0"
matplotlib = "^3.7.2"
folium = "^0.14.0"
pandas = "^2.1.0"
geojson = "^3.0.1"
shapely = "^2.0.1"
hdbscan = "^0.8.33"
geopandas = "^0.13.2"
Flask = "^3.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
